--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "watson-developer-cloud": "~3.16.1"
   },
   "engines": {
-    "node": "0.10.x"
+    "node": "9.x.x"
   },
   "repository": {
     "type": "git",
