--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "watson-developer-cloud": "~3.16.1"
   },
   "engines": {
-    "node": "3.x.x"
+    "node": ">=4"
   },
   "repository": {
     "type": "git",
